--- a/emacs/configuration.org
+++ b/emacs/configuration.org
@@ -448,8 +448,8 @@ Useful if file changed on disk
 #+BEGIN_SRC emacs-lisp
   (use-package f)
   (use-package org)
-  (setq org-directory "~/Documents/org/")
-  (setq org-agenda-files (directory-files-recursively "~/Documents/" "\.org$"))
+  (setq org-directory "~/org/")
+  (setq org-agenda-files (directory-files-recursively "~/" "\.org$"))
 #+END_SRC
 ** Utility functions
 #+begin_src emacs-lisp
@@ -554,7 +554,7 @@ Make org files a bit more readable
 ** Use =org-journal=
 #+BEGIN_SRC emacs-lisp
   (use-package org-journal
-    :custom (org-journal-dir "~/Documents/org/journal" "Set journal location"))
+    :custom (org-journal-dir "~/org/journal" "Set journal location"))
 #+END_SRC
 
 ** Enable =htmllize=
