--- a/emacs-config/configuration.org
+++ b/emacs-config/configuration.org
@@ -1110,10 +1110,17 @@ Simple function to see the test coverage of the current open buffer
  #+BEGIN_SRC emacs-lisp
    (use-package elpy)
    (use-package pyenv-mode)
+   (use-package blacken)
+   (use-package py-autopep8)
+   (add-hook 'elpy-mode-hook 'py-autopep8-enable-on-save)
    (elpy-enable)
    ;; (pyenv-mode)
-   (setq python-shell-interpreter "ipython"
-      python-shell-interpreter-args "--simple-prompt -c exec('__import__(\\'readline\\')') -i")
+   ;; (setq python-shell-interpreter "ipython"
+   ;;   python-shell-interpreter-args "--simple-prompt -c exec('__import__(\\'readline\\')') -i")
+   (setq python-shell-interpreter "jupyter"
+      python-shell-interpreter-args "console --simple-prompt"
+      python-shell-prompt-detect-failure-warning nil)
+   (add-to-list 'python-shell-completion-native-disabled-interpreters "jupyter")
  #+END_SRC
 
 * Docker
