--- a/emacs-config/configuration.org
+++ b/emacs-config/configuration.org
@@ -9,7 +9,7 @@ The =.emacs= file in home directory should only contain
 where the path to bootstrap.el is adjusted to wherever you cloned this repo.
 This will also automatically pull the latest version of the config on startup, unless you forbid it with
 #+BEGIN_SRC emacs-lisp :tangle no
-(setq config-no-auto-update t)
+(setq config-no-auto-update nil)
 #+END_SRC
 
 
@@ -26,6 +26,27 @@ This will also automatically pull the latest version of the config on startup, u
 (setq mac-command-modifier 'meta)
 (setq mac-option-modifier 'super)
 #+END_SRC
+
+* Garbage Collection Tuning
+ #+begin_src emacs-lisp
+   (defmacro k-time (&rest body)
+     "Measure and return the time it takes evaluating BODY."
+     `(let ((time (current-time)))
+        ,@body
+        (float-time (time-since time))))
+
+   ;; When idle for 30sec run the GC no matter what.
+   (defvar k-gc-timer
+     (run-with-idle-timer 30 t
+                          (lambda ()
+                            (message "Garbage Collector has run for %.06fsec"
+                                     (k-time (garbage-collect))))))
+
+   ;; Set garbage collection threshold to 1GB.
+   (setq gc-cons-threshold #x40000000)
+   ;; Set garbage collection to 20% of heap
+   (setq gc-cons-percentage 0.2)
+ #+end_src
 
 * Security
 Inspired by [[https://ogbe.net/emacsconfig.html][ogbe.net]] and [[https://glyph.twistedmatrix.com/2015/11/editor-malware.html][Your Text Editor Is Malware]].
@@ -478,10 +499,9 @@ Make org files a bit more readable
 
 
 * Startup behavior
-** Toggle fullscreen by default
+** Maximize frame at startup
 #+BEGIN_SRC emacs-lisp
-(use-package maxframe)
-(toggle-frame-fullscreen)
+(maximize-frame)
 #+END_SRC
 
 #+RESULTS:
